hphp/hack/test/typecheck/construct/explicit_consistent_construct/all/all.php.exp
File "all.php", line 3, characters 3-23:
This trait is marked <<__ConsistentConstruct>>, so it must declare a constructor explicitly (Naming[2118])
File "all.php", line 6, characters 3-23:
This class is marked <<__ConsistentConstruct>>, so it must declare a constructor explicitly (Naming[2118])
File "all.php", line 9, characters 3-23:
This interface is marked <<__ConsistentConstruct>>, so it must declare a constructor explicitly (Naming[2118])
