hphp/hack/test/typecheck/construct/explicit_consistent_construct/all/all.php
<?hh

<<__ConsistentConstruct>>
trait T {}

<<__ConsistentConstruct>>
class C {}

<<__ConsistentConstruct>>
interface I {}
